--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <nav id="navbar" class="navbar d-flex">
       <ul>
         <li><a class="nav-link scrollto active" href="#" data-aos="zoom-out-right" data-aos-duration="500">Inicio</a></li>
-        <li><a class="nav-link scrollto" href="#about" data-aos="zoom-out-up" data-aos-duration="500">Informacion</a></li>
+        <li><a class="nav-link scrollto" href="informacion.html" target="_blank" data-aos="zoom-out-up" data-aos-duration="500">Informacion</a></li>
         <li><a class="nav-link scrollto" href="#services" data-aos="zoom-out-left" data-aos-duration="500">Soporte</a></li>
         </li>
       </ul>
