--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
   <section id="header">
     <nav id="navbar" class="navbar d-flex">
       <ul>
-        <li><a class="nav-link scrollto active" href="#" data-aos="zoom-out-right" data-aos-duration="500">Inicio</a></li>
-        <li><a class="nav-link scrollto" href="informacion.html" target="_blank" data-aos="zoom-out-up" data-aos-duration="500">Informacion</a></li>
-        <li><a class="nav-link scrollto" href="#services" data-aos="zoom-out-left" data-aos-duration="500">Soporte</a></li>
+        <li><a class="nav-link scrollto active" href="#" data-aos="zoom-out-right" data-aos-duration="500">Inicio</a>
+        </li>
+        <li><a class="nav-link scrollto" href="informacion.html" target="_blank" data-aos="zoom-out-up"
+            data-aos-duration="500">Informacion</a></li>
+        <li><a class="nav-link scrollto" href="#services" data-aos="zoom-out-left" data-aos-duration="500">Soporte</a>
+        </li>
         </li>
       </ul>
       <i class="bi bi-justify-right mobile-nav-toggle"></i>
@@ -176,9 +179,11 @@
               <h3><span id="p1">Copia el IP <i class="bi bi-arrow-bar-right"></i> </span></span> <button
                   onclick="copyToClipboard('#p2')"><i class="bi bi-clipboard-fill"></i></p>
             </div>
-            <iframe src="https://discord.com/widget?id=1037197203208425472&theme=dark" allowtransparency="true"
-              frameborder="0"
-              sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            <div class="iframe-center">
+              <iframe src="https://discord.com/widget?id=1037197203208425472&theme=dark" allowtransparency="true"
+                frameborder="0"
+                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            </div>
             <div class="sidebar-item recent-posts">
               <h1 class="sidebar-title">Publicaciones Importantes <br><i class="bi bi-arrow-bar-down"></i></h1>
               <div class="mt-3">
